# gg-proxy

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  README.zh.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-runner-image.yml  ci.yml  release.yml
.rag/: L0-overview.md  _graph.json  _index.md  _manifest.json
.rag/ADR/: 001-eventbus-only-fanout.md  002-protocol-interfaces.md  003-optimistic-locking.md  004-delivery-tiers.md  ADR-Summary.md
.rag/L1-systems/: gg-relay.md
.rag/L2-modules/: api-layer.md  cluster-redis.md  core-eventbus.md  im-integration.md  session-manager.md  store-persistence.md  tracing-observability.md
.rag/L3-chains/: eventbus-fanout.md  hitl-decision-flow.md  session-lifecycle.md
.rag/api-contracts/: gg-relay-api.md
deploy/: docker-compose.dev.yml  docker-compose.prod.yml
deploy/docker/: Dockerfile.service  README.md
deploy/grafana/: gg-relay-dashboard.json
deploy/helm/gg-relay/: .helmignore  Chart.yaml  values.example.yaml  values.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  runner-networkpolicy.yaml  secret.example.yaml  service.yaml  servicemonitor.yaml
deploy/nginx/: jaeger-proxy.conf
deploy/prometheus/: prometheus.yml
docs/: api.md  architecture.md  cluster.md  dashboard-design-audit.md  dashboard-ux-copy.md  deployment.md  docker-runner-spike.md  ecc-frontend-capabilities-report.md  im-backends.md  openapi.snapshot.json  sdk-interrupt-resume-spike.md  sdk-message-ordering-spike.md  sdk-spike-report.md  security.md  team-deployment.md  tracing.md
docs/superpowers/plans/: 2026-05-22-plan-2-plugin-assembly-and-real-sdk-dispatch.md  2026-05-22-plan-3-docker-backend-and-wire-transport.md  2026-05-22-plan-4-session-manager-api-dashboard-and-ops.md  2026-05-22-plan-5-foundation-hardening-and-dx.md  2026-05-22-plan-6-pause-resume-dashboard-ux-and-im-decoupling.md  2026-05-22-walking-skeleton-inprocess.md  2026-05-23-plan-7-foundation-polish.md  2026-05-23-plan-8-team-scale-and-collab-ADDENDUM.md  2026-05-23-plan-8-team-scale-and-collab.md  2026-05-24-plan-9-cluster-scaling-and-k8s.md  2026-05-25-per-user-credentials-plan-v1.md  2026-05-25-per-user-credentials-plan-v2.md  2026-05-25-per-user-credentials-plan-v3.md  2026-05-26-require-per-user-credentials-plan-v1.md  2026-05-26-require-per-user-credentials-plan-v2.md  2026-05-26-require-per-user-credentials-plan-v3.md  2026-05-26-require-per-user-credentials-plan-v4.md  2026-05-26-require-per-user-credentials-plan-v5.md
docs/superpowers/specs/: 2026-05-22-sdk-bootstrap-and-runtime-design.md
examples/: docker_executor_demo.py  end_to_end_demo.py  walking_skeleton_demo.py
images/gg-relay-runner/: .dockerignore  Dockerfile  README.md
scripts/: README.md  check_licenses.py  check_oos.sh  check_version_sync.py  dump_openapi.py  load_test.py  spike_docker_round_trip.sh  spike_sdk_interrupt.py  spike_sdk_interrupt_resume.py  spike_sdk_long_pause.py  spike_sdk_message_ordering.py
src/gg_relay/: __init__.py  cli.py  config.py
src/gg_relay/api/: __init__.py  audit_service.py  deps.py  main.py  schemas.py  sse.py
src/gg_relay/auth/: __init__.py  db_resolver.py  env_resolver.py  protocol.py  store.py
src/gg_relay/cluster/: __init__.py  boot_check.py  factory.py  key_invalidate.py  redis_bus.py  redis_rate_limit.py  wire.py
src/gg_relay/comments/: __init__.py  sanitizer.py
src/gg_relay/core/: __init__.py  domain.py  event_bus.py  events.py  exceptions.py  protocol.py
src/gg_relay/dashboard/: __init__.py  router.py
src/gg_relay/im/: __init__.py  card.py  protocol.py  router.py  subscriber.py
src/gg_relay/maintenance/: __init__.py  retention.py
src/gg_relay/proxy/: __init__.py  audit.py  server.py
src/gg_relay/redaction/: __init__.py  engine.py
src/gg_relay/session/: __init__.py  client.py  control.py  frames.py  manager.py  recovery.py  spec.py
src/gg_relay/store/: __init__.py  dashboard_keys.py  durable_event.py  engine.py  exceptions.py  protocol.py  repository.py  schema.py  user_credentials.py
src/gg_relay/subscribers/: __init__.py  alert_router.py  cost_metric_subscriber.py  failure_subscriber.py
src/gg_relay/tracing/: __init__.py  metrics.py  metrics_subscriber.py  setup.py  subscriber.py  task_trace.py
tests/: conftest.py
tests/integration/: test_admin_keys_e2e.py  test_alert_routing_e2e.py  test_api_pause_resume.py  test_api_sessions.py  test_assembler_e2e.py  test_audit_dashboard_render.py  test_audit_endpoint_e2e.py  test_batch_cancel_retry_e2e.py  test_body_credentials_allowlist.py  test_bootstrap_admin_cli.py  test_ci_workflow_extras_parity.py  test_comments_e2e.py  test_cost_per_owner_e2e.py  test_dashboard.py  test_dashboard_a11y.py  test_dashboard_batch_toolbar.py  test_dashboard_chart.py  test_dashboard_charts.py  test_dashboard_cmdk.py  test_dashboard_comments_render.py  test_dashboard_cta_partials.py  test_dashboard_favorites_render.py  test_dashboard_kanban.py  test_dashboard_legacy_admin_role.py  test_dashboard_login.py  test_dashboard_new_submit.py  test_dashboard_owner_badge_filter.py  test_dashboard_role_default_view.py  test_dashboard_templates_render.py  test_dashboard_toast.py  test_dev_compose.py  test_docker_executor.py  test_end_to_end.py  test_favorites_e2e.py  test_feishu_webhook.py  test_health_db_check.py  test_hitl_batch_e2e.py  test_hitl_concurrency.py  test_k8s_manifests.py  test_loadtest_extra.py  (+29 more)
tests/unit/: test_config_otel_alias.py  test_config_plan8_fields.py  test_deploy_artifacts.py  test_env_example.py  test_grafana_dashboard_valid.py  test_oos_gate.py  test_plan8_spec_consistency.py  test_plan9_release_artifacts.py  test_prometheus_scrape_config.py  test_version_sync.py
tests/unit/api/: test_admin_drain.py  test_api_key_constant_time.py  test_api_key_id_hash.py  test_api_key_label_parser.py  test_api_key_middleware_db.py  test_audit_middleware_fallback.py  test_config_api_keys.py  test_cost_endpoints.py  test_dashboard_cookie_app_state.py  (+10 more)
(+189 files in other folders)
