[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gg-relay"
version = "0.1.0"
description = "Python middleware/relay service over Claude Code SDK — tracing, IM integration, and visual dashboard"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "httpx>=0.27",
    "typer>=0.12",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "claude-code-sdk>=0.0.14",
    "sse-starlette>=2.0",
    "aiodocker>=0.21,<1.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
redis = ["redis>=5.0"]
otel-http = ["opentelemetry-exporter-otlp-proto-http>=1.24"]
feishu = []  # FeishuBackend uses only httpx (already a core dep); kept
            # as an empty extra so deployment recipes can pin a future
            # SDK without breaking pyproject contracts.
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
]
all = ["gg-relay[postgres,redis,otel-http,feishu,dev]"]

[project.scripts]
gg-relay = "gg_relay.cli:app"

[project.entry-points."gg_relay.im_backends"]
feishu = "gg_relay.im.backends.feishu:FeishuBackend"

[tool.hatch.build.targets.wheel]
packages = ["src/gg_relay"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "tests.*"
# Pytest test methods carry an implicit `self`, which mypy treats as partial
# typing — so strict mode reports them under `disallow_incomplete_defs` rather
# than `disallow_untyped_defs`. Disable both to silence the ~17 pre-existing
# `no-untyped-def` warnings without weakening type-checking elsewhere.
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Plan 4 final floor: 88% global (90% stretch). The threshold guards
# against regressions; per-module targets (session ≥ 90%, api ≥ 85%,
# store ≥ 90%, redaction ≥ 95%) are tracked in the plan's DOD.
addopts = "--cov=gg_relay --cov-report=term-missing --cov-fail-under=88"
testpaths = ["tests"]
markers = [
    "requires_sdk: tests that exercise claude-code-sdk integration (no API call)",
    "requires_api_key: tests that hit the real Anthropic API (skipped without key)",
    "requires_docker: tests that need a reachable Docker daemon (Plan 3)",
    "requires_curl: integration tests that need `curl` on PATH (Plan 3 proxy smoke)",
    "requires_feishu: tests that hit a real Feishu account (skipped by default)",
]
