[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gg-relay"
version = "0.9.0"
description = "Python middleware/relay service over Claude Code SDK — tracing, IM integration, and visual dashboard"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "httpx>=0.27",
    "typer>=0.12",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "claude-code-sdk>=0.0.14",
    "sse-starlette>=2.0",
    "aiodocker>=0.21,<1.0",
    "aiohttp>=3.9",
    "prometheus-client>=0.20",
    # Plan 8 D8.5 — session comments rendering (markdown → sanitized HTML).
    # ``markdown-it-py`` parses; ``bleach`` whitelists the allowed tag set
    # so XSS payloads (``<script>`` / ``<img onerror>`` / ``javascript:``
    # URLs) are stripped before the dashboard renders the body.
    "markdown-it-py>=3.0",
    "bleach>=6.0",
    # Plan 8 D8.29 — DBKeyResolver TTLCache. Predeclared at Task 1 so
    # later phase tasks (KeyResolver / dashboard cookie middleware) can
    # rely on it without a second dependency churn.
    "cachetools>=5.3",
    # Plan 8 D8.26 / Task 3 — dashboard cookie auth bcrypt validation.
    # Operator-supplied hashes in ``RELAY_DASHBOARD_USERS_RAW`` are
    # ``bcrypt.checkpw``-verified at login; the SDK is a tiny C-ext
    # library with zero transitive deps so adding it here is cheap.
    "bcrypt>=4.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
# Plan 5 D5.15 deleted the ``[redis]`` extra because nothing in the
# codebase used Redis. Plan 8 D8.1 (EventBus over Redis Streams) and
# D8.2 (Lua-backed distributed rate limiter) re-introduce Redis as the
# *optional* multi-worker backend tier — the default single-worker
# install still has zero Redis dependency. Reinstating the extra here
# lets operators opt in via ``pip install -e '.[redis]'`` /
# ``uv sync --extra redis`` without re-litigating the deletion.
#
# Plan 9 v0.9.0-rc (D9.0b) — upper-bound lock to <6.0. The 5.x→6.x
# transition is far enough off that we'd rather discover the break
# in our own CI than let an operator's `pip install --upgrade`
# silently swap in an untested major. fakeredis is a dev-only test
# helper and lives under [dev] to keep this extra production-clean.
redis = ["redis>=5.0,<6.0"]
# Plan 9 D9.8 — kubernetes-asyncio for K8sJobExecutor (executor_kind=k8s_job).
# Upper bound pinned to match the k8s.io/client-go major series in the same
# release window. The dependency is only exercised when the operator opts in
# via Config.executor_kind, so users running inprocess/docker never pay the
# import / wheel-size cost.
k8s = ["kubernetes-asyncio>=29,<32"]
otel-http = ["opentelemetry-exporter-otlp-proto-http>=1.24"]
feishu = []  # FeishuBackend uses only httpx (already a core dep); kept
            # as an empty extra so deployment recipes can pin a future
            # SDK without breaking pyproject contracts.
# Plan 7 Task 4 (D7.10): Locust load-test profiles. Deliberately excluded
# from CI and from the ``all`` aggregate — operators install on demand
# via ``pip install -e .[loadtest]`` or ``uv sync --extra loadtest``.
loadtest = ["locust>=2.20"]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.4",
    # Plan 9 v0.9.0-rc (D9.0b) — test infra for upcoming Redis tier.
    # fakeredis: in-process Redis stub for fast unit tests of the
    #   D9.1 RedisStreamEventBus / D9.2 RedisRateLimitStore wiring
    #   without needing a Redis container in CI.
    # pytest-xdist: parallel test execution for the D9.6 multi-worker
    #   integration tests (spawn 2 ASGI processes per test).
    # testcontainers: real Redis container for cross-version /
    #   end-to-end integration tests where fakeredis behaviour
    #   diverges from real redis-py 5.x semantics.
    "fakeredis[lua]>=2.20",
    "pytest-xdist>=3.5",
    "testcontainers>=4.5",
]
all = ["gg-relay[postgres,redis,otel-http,feishu,dev]"]

[project.scripts]
gg-relay = "gg_relay.cli:app"

[project.entry-points."gg_relay.im_backends"]
feishu = "gg_relay.im.backends.feishu:FeishuBackend"

[tool.hatch.build.targets.wheel]
packages = ["src/gg_relay"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = "tests.*"
# Pytest test methods carry an implicit `self`, which mypy treats as partial
# typing — so strict mode reports them under `disallow_incomplete_defs` rather
# than `disallow_untyped_defs`. Disable both to silence the ~17 pre-existing
# `no-untyped-def` warnings without weakening type-checking elsewhere.
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Plan 4 final floor: 88% global (90% stretch). The threshold guards
# against regressions; per-module targets (session ≥ 90%, api ≥ 85%,
# store ≥ 90%, redaction ≥ 95%) are tracked in the plan's DOD.
addopts = "--cov=gg_relay --cov-report=term-missing --cov-fail-under=88"
testpaths = ["tests"]
# Plan 7 Task 5 (D7.4): SessionRepository was renamed to SqlAlchemyStore;
# the legacy alias emits a DeprecationWarning on instantiation. Suppress
# the noise from in-tree gg_relay.store call-sites so the test runner
# log stays signal-rich. Tests that explicitly verify the alias warning
# still capture it via ``pytest.warns(DeprecationWarning)``.
filterwarnings = [
    "ignore::DeprecationWarning:gg_relay.store",
]
markers = [
    "requires_sdk: tests that exercise claude-code-sdk integration (no API call)",
    "requires_api_key: tests that hit the real Anthropic API (skipped without key)",
    "requires_docker: tests that need a reachable Docker daemon (Plan 3)",
    "requires_curl: integration tests that need `curl` on PATH (Plan 3 proxy smoke)",
    "requires_feishu: tests that hit a real Feishu account (skipped by default)",
]
